[package]
name = "age-cli"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "age"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.35"
clap = { version = "4.5.2", features = ["derive"] }
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
tera = { version = "1.19.1", features = ["builtins"] }
toml = "0.8.10"
