[project]
name = "age"
version = "0.3.0"
description = "This is virtual project for testing and documentation."
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
dependencies = [
    "pytest~=8.1.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
