[project]
name = "age-cli"
version = "0.7.0"
description = "This is virtual project for testing and documentation."
authors = [
    { name = "Kazuya Takei", email = "myself@attakei.net" }
]
dependencies = [
    "pytest~=8.1.1",
    "sphinx~=7.2.6",
    "myst-parser~=2.0.0",
    "piccolo-theme~=0.20.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[tool.uv]
dev-dependencies = [
    "esbonio~=0.16.4",
    "sphinx-autobuild~=2024.2.4",
]

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
