[package]
name = "dummy"
version = "0.1.0"
edition = "2021"

[package.metadata.age]
current_version = "0.1.0"

[[package.metadata.age.files]]
path = "example.txt"
search = "version = '{{current_version}}'"
replace = "version = '{{new_version}}'"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
